tests/paczka1/fuzzy1/66644348.err
Error in line 3: q96MEa A253 11,5
Error in line 6: tJIul A253 91,3
Error in line 12: tJIul A918 9,0
Error in line 14: tJIul A253 99,8
Error in line 16: tJIul S946 35,0
Error in line 20: xbdHdxX A196 16,1
Error in line 27: iOb A253 -3,2
Error in line 22: tJIul A253 56,5
Error in line 26: xbdHdxX A253 6,8
Error in line 29: tJIul A196 75,0
Error in line 13: iOb A253 56,2
Error in line 37: iOb A918 14,6
